@@ -1,3 +1,9 @@
+2011-05-11  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/plugins.c:
+   Improve the plugin manager dialog a little.
+
+
 2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * plugins/splitwindow.c:
